Add docker and update readme

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,10 @@ target/
 .springBeans
 .sts4-cache
 
+/postgres-orderservice
+/postgres-paymentservice
+/redis
+
 ### IntelliJ IDEA ###
 .idea
 *.iws
