--- a/payment/src/main/resources/application.yml
+++ b/payment/src/main/resources/application.yml
@@ -38,6 +38,9 @@ kafka:
     key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
     value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
 
+server:
+  port: 5051
+
 outbox:
   lock:
     key: payment-outbox-lock
